# cp-notebook

./: .autocp  .gitignore  CMakeLists.txt  main  main.cpp
AtCoder - AtCoder Regular Contest 221/: A___Two_Arithmetic_Progressions.cpp
CSES - CSES Problem Set/: Collecting_Numbers.cpp  Collecting_Numbers_II.cpp  Maximum_Subarray_Sum.cpp  Missing_Coin_Sum.cpp  Playlist.cpp  Static_Range_Sum_Queries  Static_Range_Sum_Queries.cpp  Stick_Lengths.cpp  Sum_of_Two_Values.cpp  Towers.cpp
CodeChef - START240D/: Counting_Characters_.cpp  Points_Table.cpp
CodeChef - START241/: No_3_Equal.cpp
Codeforces - Codeforces Round 1011 Div 2/: B_Serval_and_Final_MEX.cpp
Codeforces - Codeforces Round 1016 Div 3/: C_Simple_Repetition.cpp
Codeforces - Codeforces Round 1039 Div 2/: C_Leftmost_Below.cpp
Codeforces - Codeforces Round 1101 Div 2/: A_Convergence.cpp
Codeforces - Codeforces Round 747 Div 2/: B_Special_Numbers.cpp
Codeforces - Codeforces Round 839 Div 3/: A_AB.cpp
Codeforces - Codeforces Round 972 Div 2/: B1_The_Strict_Teacher_Easy_Version.cpp
Codeforces - Codeforces Round 979 Div 2/: C_A_TRUE_Battle.cpp
Codeforces - Educational Codeforces Round 107 Rated for Div 2/: C_Yet_Another_Card_Deck.cpp
Codeforces - Educational Codeforces Round 183 Rated for Div 2/: C_Monocarps_String.cpp
Codeforces - Educational Codeforces Round 190 Rated for Div 2/: B_Digit_String.cpp
Codeforces - think-cell Round 1/: B_Permutation_Printing.cpp
