cmake_minimum_required(VERSION 4.2)
project(compprog)

set(CMAKE_CXX_STANDARD 20)

add_executable(compprog main.cpp
        .cph/ABC456/A_DIce.cpp
        .cph/ABC456/A_DIce.h
)

add_executable(Sum_of_Two_Values "CSES - CSES Problem Set/Sum_of_Two_Values.cpp")
add_executable(Maximum_Subarray_Sum "CSES - CSES Problem Set/Maximum_Subarray_Sum.cpp")
add_executable(Stick_Lengths "CSES - CSES Problem Set/Stick_Lengths.cpp")
add_executable(Missing_Coin_Sum "CSES - CSES Problem Set/Missing_Coin_Sum.cpp")
add_executable(Collecting_Numbers "CSES - CSES Problem Set/Collecting_Numbers.cpp")
add_executable(C_Yet_Another_Card_Deck "Codeforces - Educational Codeforces Round 107 Rated for Div 2/C_Yet_Another_Card_Deck.cpp")
add_executable(B_Special_Numbers "Codeforces - Codeforces Round 747 Div 2/B_Special_Numbers.cpp"
        "Codeforces - Codeforces Round 747 Div 2/B_Special_Numbers.cpp")
add_executable(A_AB "Codeforces - Codeforces Round 839 Div 3/A_AB.cpp")
add_executable(Points_Table "CodeChef - START240D/Points_Table.cpp")
add_executable(Counting_Characters_ "CodeChef - START240D/Counting_Characters_.cpp")
add_executable(C_Monocarps_String "Codeforces - Educational Codeforces Round 183 Rated for Div 2/C_Monocarps_String.cpp")
add_executable(Static_Range_Sum_Queries "CSES - CSES Problem Set/Static_Range_Sum_Queries.cpp")
add_executable(Playlist "CSES - CSES Problem Set/Playlist.cpp")
add_executable(Towers "CSES - CSES Problem Set/Towers.cpp")
add_executable(A_Convergence "Codeforces - Codeforces Round 1101 Div 2/A_Convergence.cpp")
add_executable(B_Serval_and_Final_MEX "Codeforces - Codeforces Round 1011 Div 2/B_Serval_and_Final_MEX.cpp")
add_executable(C_A_TRUE_Battle "Codeforces - Codeforces Round 979 Div 2/C_A_TRUE_Battle.cpp")
add_executable(C_Leftmost_Below "Codeforces - Codeforces Round 1039 Div 2/C_Leftmost_Below.cpp")
add_executable(A_Shashliks "Codeforces - Codeforces Round 1031 Div 2/A_Shashliks.cpp")
add_executable(B_Playing_in_a_Casino "Codeforces - Codeforces Round 861 Div 2/B_Playing_in_a_Casino.cpp")
add_executable(A___Two_Arithmetic_Progressions "AtCoder - AtCoder Regular Contest 221/A___Two_Arithmetic_Progressions.cpp")
add_executable(B_Permutation_Printing "Codeforces - think-cell Round 1/B_Permutation_Printing.cpp")
add_executable(Collecting_Numbers_II "CSES - CSES Problem Set/Collecting_Numbers_II.cpp")